--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/angular-fontawesome": "^0.11.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@ionic/angular": "^7.6.2",
     "dayjs": "^1.11.10",
     "ng-zorro-antd": "^14.2.1",
     "rxjs": "~7.5.0",
@@ -42,6 +43,7 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "@ionic/angular-toolkit": "latest"
   }
 }
